fix: gap pricing cards

--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -1327,8 +1327,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            /* 16px - 20px */
-            gap: clamp(1rem, 1.8vw, 1.25rem);
+            gap: clamp(2.5rem, 3vw, 3rem);
             position: relative;
             z-index: 10;
         }
